Implemented mouse movement to camera: also implemented bug related to a non-static function that I need static. reminder: work on this tomorrow

--- a/EBON/EBON.vcxproj
+++ b/EBON/EBON.vcxproj
@@ -151,6 +151,7 @@
   <ItemGroup>
     <ClInclude Include="Application.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Directives.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Shader.h" />
   </ItemGroup>
