--- a/EBON/EBON.vcxproj
+++ b/EBON/EBON.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="OBJMesh.cpp" />
     <ClCompile Include="Primitives.cpp" />
     <ClCompile Include="RawModel.cpp" />
+    <ClCompile Include="ShaderFade.cpp" />
     <ClCompile Include="ShaderManager.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
     <ClCompile Include="TexturedModel.cpp" />
@@ -168,6 +169,7 @@
     <ClInclude Include="PerlinNoise.hpp" />
     <ClInclude Include="Primitives.h" />
     <ClInclude Include="RawModel.h" />
+    <ClInclude Include="ShaderFade.h" />
     <ClInclude Include="ShaderManager.h" />
     <ClInclude Include="ShaderProgram.h" />
     <ClInclude Include="stb_image.h" />
