--- a/EBON/EBON.vcxproj
+++ b/EBON/EBON.vcxproj
@@ -144,11 +144,14 @@
     <ClCompile Include="..\Dependencies\glcore\gl_core_4_5.c" />
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="EarthModel.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="Image.cpp" />
+    <ClCompile Include="IvysaurModel.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="Model.cpp" />
     <ClCompile Include="OBJMesh.cpp" />
     <ClCompile Include="Primitives.cpp" />
     <ClCompile Include="RawModel.cpp" />
@@ -160,13 +163,19 @@
   <ItemGroup>
     <ClInclude Include="Application.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="DirectionalLight.h" />
     <ClInclude Include="Directives.h" />
+    <ClInclude Include="EarthModel.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="Image.h" />
+    <ClInclude Include="IvysaurModel.h" />
     <ClInclude Include="Mesh.h" />
+    <ClInclude Include="Model.h" />
+    <ClInclude Include="ModelLight.h" />
     <ClInclude Include="OBJMesh.h" />
     <ClInclude Include="PerlinNoise.hpp" />
+    <ClInclude Include="PointLight.h" />
     <ClInclude Include="Primitives.h" />
     <ClInclude Include="RawModel.h" />
     <ClInclude Include="ShaderFade.h" />
