Started working on implementing a GameObject class. Also added more ImGui windows to control rendered models.

--- a/EBON/EBON.vcxproj.filters
+++ b/EBON/EBON.vcxproj.filters
@@ -150,6 +150,9 @@
     <ClCompile Include="imgui_impl_opengl3.cpp">
       <Filter>Source Files\Imports\imgui</Filter>
     </ClCompile>
+    <ClCompile Include="GameObject.cpp">
+      <Filter>Source Files\Game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ShaderManager.h">
@@ -166,9 +169,6 @@
     </ClInclude>
     <ClInclude Include="ShaderProgram.h">
       <Filter>Header Files\Shaders</Filter>
-    </ClInclude>
-    <ClInclude Include="Directives.h">
-      <Filter>Header Files\Imports</Filter>
     </ClInclude>
     <ClInclude Include="stb_image.h">
       <Filter>Header Files\Imports</Filter>
@@ -250,6 +250,9 @@
     </ClInclude>
     <ClInclude Include="imgui_impl_opengl3.h">
       <Filter>Header Files\Imports\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject.h">
+      <Filter>Header Files\Game</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
