--- a/EBON/imgui.ini
+++ b/EBON/imgui.ini
@@ -9,7 +9,22 @@ Size=345,180
 Collapsed=0
 
 [Window][Model Adjustments]
-Pos=132,142
-Size=345,180
+Pos=828,99
+Size=352,59
+Collapsed=0
+
+[Window][Adjustments]
+Pos=6,9
+Size=355,77
+Collapsed=0
+
+[Window][Information]
+Pos=58,20
+Size=346,50
+Collapsed=0
+
+[Window][Camera Options]
+Pos=58,76
+Size=269,164
 Collapsed=0
 
